objects/USPS_Label__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is used to Keep the values for integration with USPS Label</description>
    <fields>
        <fullName>AccessToken_url__c</fullName>
        <label>AccessToken_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <label>grant_type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>USPS Label</label>
</CustomObject>